# optee-graddeck

core/: core.mk
core/crypto/: rng_hw.c
core/drivers/: frame_buffer.c  gic.c  stm32_bsec.c  stm32_bsec3.c  stm32_cpu_opp.c  stm32_dbgmcu_mbx.c  stm32_exti.c  stm32_fmc.c  stm32_gpio.c  stm32_hpdma.c  stm32_hsem.c  stm32_i2c.c  stm32_ipcc.c  stm32_irq_notif.c  stm32_iwdg.c  stm32_ltdc.c  stm32_omm.c  stm32_rng.c  stm32_rtc.c  stm32_tamp.c  stm32_uart.c  stm32mp_pmic2.c  stm32mp_provisioning.c  stpmic2.c  sub.mk
core/drivers/adc/: adc_fw.c  stm32_adc.c  stm32_adc_core.c
core/drivers/clk/: clk-stm32-core.c  clk-stm32-core.h  clk-stm32-rcc.c  clk-stm32mp13.c  clk-stm32mp15.c  clk-stm32mp2-cal.c  clk-stm32mp21.c  clk-stm32mp25.c  clk.c  sub.mk
core/drivers/counter/: counter.c  stm32_lptimer.c  stm32_stgen.c  sub.mk
core/drivers/firewall/: firewall.c  stm32_etzpc.c  stm32_firewall.c  stm32_iac.c  stm32_rif.c  stm32_rifsc.c  stm32_risab.c  stm32_risaf.c  stm32_serc.c  sub.mk
core/drivers/mailbox/: mailbox.c
core/drivers/nvmem/: stm32_tamp_nvram.c
core/drivers/regulator/: regulator.c  regulator_dt.c  stm32_vrefbuf.c
core/drivers/remoteproc/: stm32_remoteproc.c
core/drivers/rstctrl/: stm32_rstctrl.c  stm32_rstctrl.h  stm32mp1_rstctrl.c  stm32mp25_rstctrl.c
core/kernel/: dt.c  dt_driver.c  notif.c  panic.c  pseudo_ta.c  tee_ta_manager.c  user_ta.c
core/lib/psa-adac/psa_crypto/: CMakeLists.txt  adac_crypto_psa_pk.c
core/mm/: core_mmu.c  mobj.c
core/pta/: rtc.c  scmi.c
mk/: compile.mk  config.mk
scripts/: checkpatch_inc.sh  sign_rproc_fw.py
(+271 files in other folders)
